# hyperscale

./: .bazelrc  .clang-format  .dockerignore  .editorconfig  .gitignore  .mailmap  .travis.yml  AUTHORS  BOOKMARKS.md  BUILD  BUILD.bazel  CMakeLists.txt  DerivedSources.make  Dockerfile  LICENSE.md  Makefile  README.md  WORKSPACE
.github/workflows/: cppcheck.yml  workflow.yml
cmake/modules/: CodeCoverage.cmake
demo/: fibonacci.hs
include/: CMakeLists.txt
include/hyperscale/: CMakeLists.txt  command.hpp  config.hpp  config.hpp.in  hyperscale.hpp
include/hyperscale/ast/: binary.hpp  call-expr.hpp  call.hpp  decl-ref-expr.hpp  decl.hpp  default-visitor.hpp  expr.hpp  expression.hpp  file-source.hpp  function.hpp  fwd.hpp  graph-visitor.hpp  identifier.hpp  int-expr.hpp  int-expr.hxx  ir-generator-visitor.hpp  name-ty.hpp  node.hpp  node.hxx  node_binary_operator_expression.hpp  node_root.hpp  node_variable_declaration.hpp  number.hpp  op-expr.hpp  op-expr.hxx  operator.hpp  paren-expr.hpp  pretty-printer-visitor.hpp  pretty-printer.hpp  prototype.hpp  source-file.hpp  ty.hpp  var-decl.hpp  variable.hpp  visitable.hpp  visitable.hxx  visitor.hpp  visitor.hxx
include/hyperscale/command/: build.hpp  debug.hpp  help.hpp  version.hpp
include/hyperscale/command/debug/: lexer.hpp
include/hyperscale/console/: application.hpp  command.hpp  implicit.hpp  option.hpp  option_value.hpp  switch.hpp  value.hpp
include/hyperscale/ir/: ir-generator-module.hpp
include/hyperscale/misc/: immutable.hpp
include/hyperscale/parser/: lexer.hpp  parser.hpp  token.hpp  tokens.def
include/hyperscale/source/: char_range.hpp  location.hpp  manager.hpp  range.hpp
include/hyperscale/syntax/: expected-token-exception.hpp  invalid-token-exception.hpp  token-kinds.def  token-kinds.hpp  token_kinds.def  token_kinds.hpp
include/hyperscale/v1/: ast.hpp  source_location.hpp  token.hpp
lib/: BUILD  CMakeLists.txt
lib/WTF/: BUILD  CMakeLists.txt
lib/WTF/wtf/: CMakeLists.txt
lib/einfo/: BUILD.bazel
lib/hyperscale/: BUILD  BUILD.bazel  CMakeLists.txt  config.hpp  config.hpp.in  hyperscale.hpp
lib/hyperscale/ast/: call-expr.cpp  call-expr.hpp  decl-ref-expr.cpp  decl-ref-expr.hpp  decl.cpp  decl.hpp  default-visitor.cpp  default-visitor.hpp  expr.cpp  expr.hpp  file-source.cpp  graph-visitor.cpp  graph-visitor.hpp  int-expr.cpp  int-expr.hpp  ir-generator-visitor.cpp  ir-generator-visitor.hpp  node.cpp  node.hpp  op-expr.cpp  op-expr.hpp  operator.cpp  operator.hpp  paren-expr.cpp  paren-expr.hpp  pretty-printer-visitor.cpp  pretty-printer-visitor.hpp  source-file.hpp  var-decl.cpp  var-decl.hpp  visitor.cpp  visitor.hpp
lib/hyperscale/command/: build.cpp  debug.cpp  version.cpp
lib/hyperscale/command/debug/: lexer.cpp
lib/hyperscale/console/: command.cpp
lib/hyperscale/ir/: ir-generator-module.cpp  ir-generator-module.hpp
lib/hyperscale/misc/: mutable.hpp
lib/hyperscale/parser/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
lib/hyperscale/syntax/: expected-token-exception.cpp  expected-token-exception.hpp  invalid-token-exception.cpp  invalid-token-exception.hpp  token-kinds.cpp  token-kinds.hpp  token_kinds.cpp
lib/libeinfo/: BUILD  CMakeLists.txt
src/hyperscale/: hyperscale.cpp
src/hyperscale/command/: build.cpp  debug.cpp  help.cpp  version.cpp
src/hyperscale/command/debug/: lexer.cpp
src/hyperscale/console/: command.cpp
src/hyperscale/parser/: ASTBuilder.h  Lexer.cpp  config.h  token.cpp
test/: BUILD  BUILD.bazel  CMakeLists.txt  main.cpp
test/hyperscale/ast/: call-expr.cpp  op-expr.cpp
test/hyperscale/console/: command.cpp
test/hyperscale/parser/: lexer.cpp  parser.cpp  token.cpp
test/hyperscale/syntax/: expected-token-exception.cpp  invalid-token-exception.cpp
tools/: workspace_status.sh
tools/bazel/generate-config/: BUILD.bazel  main.go
